# OpenFarmPlanner

./: .gitignore  AGENTS.md  AUTOSAVE_IMPLEMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  FIELD_BED_AREA_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  Makefile  README.md  TEST_COVERAGE_SUMMARY.md  mkdocs.yml  package-lock.json  performance_test_report.md  pyproject.toml
backend/: .coverage  .env.example  .gitignore  GROWSTUFF_INTEGRATION.md  README.md  README_OPENFARM.md  load_sample_data.py  pyproject.toml  pytest.ini  requirements.txt
backend/accounts/: admin.py  consent.py  data_export.py  emails.py  guest_demo.py  models.py  serializers.py  services.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0001_pendingactivation.py  0002_userprojectsettings.py  0003_accountdeletionrequest.py  0004_accountemailchangerequest.py  0005_documentconsent.py  0005_termsacceptance.py  0006_publicprofile.py  0007_publicprofile_unique_public_display_name_ci.py  0008_documentconsent_privacy_choice.py  0009_public_library_contribution_consent.py  0010_guestdemosession.py
backend/accounts/tests/: test_auth_api.py  test_guest_demo.py
backend/config/: exceptions.py  frontend_urls.py  pagination.py  settings.py  settings_test.py  urls.py  version.py
backend/config/tests/: test_throttle_settings.py
backend/crops/: apps.py  models.py  seed_data.py  serializers.py  services.py  species_urls.py  urls.py  views.py
backend/crops/migrations/: 0001_crop_species.py  0002_seed_initial_crop_species.py
backend/crops/tests/: test_seed_data.py  test_services.py  test_views.py
backend/farm/: admin.py  apps.py  e2e_urls.py  e2e_views.py  enum_normalization.py  enum_normalization.py.rej  growstuff_client.py  image_processing.py  models.py  models.py.rej  openfarm_import.py  project_context.py  seed_units.py  serializers.py  serializers.py.rej  services_area.py  test_growstuff_client.py  test_serializers_utils.py  test_sync_command.py  tests.py  urls.py  views.py  views.py.rej
backend/farm/common/: __init__.py  mixins.py  serializer_fields.py  views.py
backend/farm/cultures/: __init__.py  serializers.py  views.py
backend/farm/history/: __init__.py  records.py  restore.py  serializers.py  views.py
backend/farm/management/: __init__.py
backend/farm/migrations/: 0001_initial.py  0002_culture_binomial_name_culture_common_names_and_more.py  0002_culture_growstuff_id_culture_growstuff_slug_and_more.py  0003_culture_en_wikipedia_url_and_more.py  0004_plantingplan_area_usage_sqm.py  0004_remove_bed_length_m_remove_bed_width_m_bed_area_sqm.py  0005_remove_bed_length_m_remove_bed_width_m_bed_area_sqm.py  0006_add_harvest_end_date.py  0006_remove_bed_length_m_remove_bed_width_m_bed_area_sqm.py  0007_culture_allow_deviation_delivery_weeks_and_more.py  0007_culture_refactor_timing_fields.py  0008_culture_refactor_timing_fields.py  0009_remove_culture_distance_within_row_cm_and_more.py  0010_remove_culture_germination_rate_safety_margin.py  0011_remove_culture_days_to_harvest.py  0012_culture_seed_supplier.py  0013_add_seeding_fields_to_culture.py  0014_remove_culture_growstuff_fields.py  0015_add_supplier_model.py  0016_add_culture_normalized_fields.py  0017_backfill_culture_normalized_fields.py  0018_culture_package_size_g_and_more.py  0019_normalize_seed_rate_unit.py  0020_alter_culture_seed_rate_unit_and_more.py  0021_alter_culture_seed_rate_unit.py  0022_alter_culture_variety.py  0023_noteattachment.py  0024_mediafile_culturerevision_culture_image_file.py  0025_remove_culture_unique_culture_normalized_and_more.py  0026_projectrevision.py  (+60 more)
backend/scripts/: seed_large_scale_performance_test.py  test_enrich_endpoint.py  trace_enrichment_run.py
(+854 files in other folders)
