[project]
name = "OpenFarmPlanner-backend"
version = "1.0.0"
description = "OpenFarmPlanner - Django REST API backend for managing farm operations"
authors = [
    {name = "OpenFarmPlanner Team", email = "info@OpenFarmPlanner.com"},
]
dependencies = [
    "django==5.2.9",
    "djangorestframework==3.16.1",
    "django-cors-headers==4.9.0",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "psycopg2-binary>=2.9.11",
    "django-debug-toolbar>=6.1.0",
    "asgiref>=3.8.1",
    "sqlparse>=0.5.0",
    "Pillow>=11.0.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=5.0.0",
    "coverage>=7.6.0",
    "pluggy>=1.5.0",
    "iniconfig>=2.0.0",
    "packaging>=24.0",
    "pygments>=2.18.0",
]
quality = [
    "ruff==0.8.6",
    "radon==6.0.1",
]

[tool.pdm.scripts]
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
runserver = "python manage.py runserver"
test = "python -m pytest"
createsuperuser = "python manage.py createsuperuser"
shell = "python manage.py shell"
collectstatic = "python manage.py collectstatic --noinput"

[tool.ruff]
line-length = 100
exclude = [
    "node_modules",
    "dist",
    "build",
    ".venv",
    "farm/migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 10
